does 3 things: 1. fixed scroll shifting issue 2. enhanced numeric inputs 3. more numeric input improvements

--- a/WebApp/Styles/SearchPanel.css
+++ b/WebApp/Styles/SearchPanel.css
@@ -105,6 +105,7 @@
 {
   top: 35px;
   left: 10px;
+  right: 2px;
   overflow-y: auto;
   bottom: 20px;
   z-index: 5;
@@ -112,7 +113,7 @@
 
 .Search
 {
-  width: 100%;
+  width: 345px;
 }
 
 .SearchInputField
